    - Better explanation of UID/UAT creation timestamp.
    - Reorder alter table statements to allow for easier copy/paste into
      psql.
  * openpgp/pks.go, openpgp/responses.go:
    - Fix compile errors.
  * debian/postinst:
    - Check for existing of postgresql before attempting to create
      role and database. Create role without superuser or role-creating
      privs.

 -- Casey Marshall <casey.marshall@gmail.com>  Sat, 03 Aug 2013 10:15:11 -0500

hockeypuck (1.0~a1) precise; urgency=low

  [ Casey Marshall ]
  * Opening 1.0~a1 development
  * === added directory cmd/sks-hash, cmd/sks-hash/main.go,
    pgp_types.go:
    - Add SksDigest function, test utility. LP: #1176689
  * config.go, pgp_test.go, pgp_types.go, server_test.go:
    - SksDigest function passing basic unit test. LP: #1176689
    - Fix server unit tests, canned http.Request objects.
    - Removed unreachable returns in config.go.
  * mgo/worker.go, pgp_types.go:
    - Replace arbitrary cumulative key digest method with SKS
      method for recon compatibility. LP: #1176689
  * === added directory peer, peer/peer.go:
    - Add reconciliation peer. LP: #1044767
  * errors.go, hkp_types.go, mgo/worker.go, mgo/worker_test.go,
    server.go, worker.go:
    - Add op=hget. LP: #1044767
    - Remove unreachable panics, not needed for Go 1.1.
  * === added directory doc, === added directory doc/publish, === added
    directory doc/publish/static, doc/install.article,
    doc/publish/install.html, doc/publish/static/article.css,
    doc/publish/static/dir.css, doc/publish/static/dir.js,
    doc/publish/static/favicon.ico, doc/publish/static/print.css,
    doc/publish/static/slides.js, doc/publish/static/styles.css:
    - Add install doc, Present source and generated HTML.
      Published to http://cmars.github.io/hockeypuck/install.html
  * debian/control, mgo/worker.go, peer/peer.go:
    - hget fetch on recovery. Using LevelDB backend. LP: #1044767