@@ -1,13 +1,10 @@
 
 [hockeypuck.hkp]
-bind=":22742"
+bind=":11371"
 
 [conflux.recon]
-reconPort=22741
-httpPort=22742
-partners=["192.168.122.1:11370"]
+reconPort=11370
+httpPort=11371
+partners=["192.168.122.43:11370"]
 filters=["yminsky.dedup"]#,"yminsky.merge"]
-
-[conflux.recon.leveldb]
-path="./leveldb-ptree"
 
