@@ -37,6 +37,9 @@ hockeypuck (1.0~a2) precise; urgency=low
     - Check for existing of postgresql before attempting to create
       role and database. Create role without superuser or role-creating
       privs.
+  * cmd/hockeypuck/main.go, cmd/hockeypuck/test.conf, hkp/requests.go,
+    openpgp/add.go, openpgp/recon.go, openpgp/worker.go:
+    - Add SKS peer.
 
  -- Casey Marshall <casey.marshall@gmail.com>  Sat, 03 Aug 2013 10:15:11 -0500
 
